<resources>
    <!-- LENGUAGE ES -->
    <string name="app_name">MusicApp</string>
    <string name="title_home">Inicio</string>
    <string name="title_list">Lista</string>
    <string name="menusito">Menu</string>
    <string name="title_form">Formulario</string>
    <string name="titulo">Titulo</string>
    <string name="artista">Artista</string>
    <string name="Añadir">Añadir</string>
    <string name="toast_voidins">No puedes dejar el titulo o el artista vacios!!</string>
    <string name="dltBDD">Eliminar Base de datos</string>
    <string name="dialog_Advetencia">Estás seguro de eliminar todas la musica?</string>
    <string name="dialog_respuesta">Has seleccionado cancelar.</string>
    <string name="dialog_info">Información</string>
    <string name="dialog_confirmacion">Se han eliminado toda la musica correctamente!</string>
    <string name="dialog_aceptar">Aceptar</string>
    <string name="dialog_cancelar">Cancelar</string>

    <string name="dialog_Advetencia2">Estás seguro de restablecer los valores de fabrica?</string>
    <string name="dialog_textovacio">NO PUEDES AGREGAR UNA INCIDENCIA SIN UN NOMBRE!</string>
    <string name="Listar">Listar</string>
    <string name="Eliminar">Eliminar</string>
    <string name="Configuracion">Configuracion</string>
    <string name="defAñadir">Añada una nueva incidencia</string>
    <string name="defListar">Listar todas las incidencias</string>
    <string name="defEliminar">Elimina una incidencia</string>
    <string name="defConfigurar">Configura tus preferencias en la aplicacion</string>
    <string name="errorLogin">Usuario o contraseña incorrecto!</string>
    <string name="toast_correctadd">Incidencia creada correctamente</string>
    <string name="remembertxt">Recuerdame</string>
    <string name="sel_id">Selecciona un idioma</string>
    <string name="español">Español</string>
    <string name="ingles">Inglés</string>
    <string name="catalan">Catalán</string>
    <string name="login">Entra</string>
    <string name="user">Usuario</string>
    <string name="contra">Contraseña</string>
    <string name="delpref">Eliminar preferencias</string>

    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>